--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprin 01 - Encriptador </title>
-</head>
-<body>
-    <h1>Programa Encriptador</h1>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/estilo.css">
     
+</head>
+
+<body>
+    <main>
+        <div class="col-11">
+            <h1>Programa Encriptador - Desencriptador</h1>
+            <img src="img/logo.png" alt="">
+        </div>
+        <div class="">
+            <button id="btn1" class="btn btn-outline-primary btn-lg btn-block">probando</button>
+        </div>
+        <section>
+            <form action="">
+                <textarea name="" id="" cols="20" rows="3"></textarea>
+                <div class="form-group">
+                    <img src="img/!.png" class="img-alerta">
+                    <label for="input-texto">Solo letras minusculas y sin acentos</label>
+                </div>
+                <div class="botones">
+                    <input class="boton-encriptar btn btn-primary" id="boton-encriptar" type="submit" value="Encriptar">
+                    <input class="boton-desencriptar btn btn-secondary" id="boton-desencriptar" type="submit"
+                        value="Desencriptar">
+                </div>
+            </form>
+        </section>
+        <section class="mensaje-box">
+            <div class="">
+                <img src="img/mensaje.svg" width="150" height="150">
+                <h2>No nse encontro ningun menjase</h2>
+                <h3>Ingresa el texto que desees encriptar o desencriptar</h3>
+            </div>
+            <div class="" id="desaparece">
+                <textarea name="" id="" cols="20" rows="3"></textarea>
+                <br>
+                <input type="text" class="btn btn-success" value="Copiar">
+            </div>
+        </section>
+    </main>
+
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
